# software_rendering_experiments

./: .gitignore  build_binaryen.sh  build_emscripten.sh  emscripten.sh  minificationChain.txt  rust_wasm_opt.sh
src/c/: bundle.c  model_bin.c
src/css/: main.scss
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/rust_casted/: Cargo.toml
src/rust_casted/desktop/: Cargo.toml
src/rust_casted/desktop/src/: main.rs
src/rust_casted/game_core/: Cargo.toml
src/rust_casted/game_core/res/: model.rust3d  texture.rust2d
src/rust_casted/game_core/src/: controls.rs  lib.rs  minecraft4k.rs  sft_renderer.rs  shader1.rs  shader2.rs  timing.rs  trig.rs
src/rust_casted/game_core/src/rcl/: demo1.rs  mod.rs  rcl_general.rs  rcl_my_settings.rs  rcl_switch.rs
src/rust_casted/res/: made_with.rust2d
src/rust_casted/src/: controls.rs  demo1.rs  lib.rs  profile.rs  rcl.rs  rcl_general.rs  rcl_switch.rs  sft_renderer.rs  timing.rs  util.rs  vector.rs
src/rust_casted/wasm/: Cargo.toml
src/rust_casted/wasm/src/: lib.rs
src/ts/main/: hex.ts  main.ts  tsconfig.json
src/ts/main_offscreen_canvas_[experimental]/: canvas.ts  hex.ts  tsconfig.json
src/ts/worker_offscreen_canvas_[experimental]/: tsconfig.json  wasm.d.ts  worker.ts
tools/helper/src/helper/: Helper.java
